--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rell="stylesheet" href="style.css"
+    <link rell="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="quebracabe-a"
-        <img src="img/imagem1.gif" alt="imagem1"
-        <img src="img/imagem2.gif" alt="imagem2"
-        <img src="img/imagem3.gif" alt="imagem3"
-        <img src="img/imagem4.gif" alt="imagem4"
+    <div class="quebracabe-a">
+        <img src="img/imagem1.gif" alt="imagem1">
+        <img src="img/imagem2.gif" alt="imagem2">
+        <img src="img/imagem3.gif" alt="imagem3">
+        <img src="img/imagem4.gif" alt="imagem4">
         
     </div>
     
