--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rell="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="quebracabe-a">
-        <img src="img/imagem1.gif" alt="imagem1">
-        <img src="img/imagem2.gif" alt="imagem2">
-        <img src="img/imagem3.gif" alt="imagem3">
-        <img src="img/imagem4.gif" alt="imagem4">
-        
-    </div>
-    
+    <div class="quebra-cabeca"></div>
+    <img src="img/imagem1.gif" alt="Peça 1">
+    <img src="img/imagem2.gif" alt="Peça 2">
+    <img src="img/imagem3.gif" alt="Peça 3">
+    <img src="img/imagem4.gif" alt="Peça 4">
 </body>
 </html>
